(hotfix) fix input explorer category horizontal scrolling at mobile size

--- a/src/flavors/manzanares/static/components/input-explorer-input-list-header.scss
+++ b/src/flavors/manzanares/static/components/input-explorer-input-list-header.scss
@@ -16,7 +16,6 @@
 
   .mapseed-input-explorer-input-list-header__subcategory-menu {
     display: flex;
-    justify-content: center;
     border-bottom: 2px solid transparent;
     text-transform: uppercase;
     list-style: none;
