--- a/src/flavors/williams/static/components/input-explorer-category-menu.scss
+++ b/src/flavors/williams/static/components/input-explorer-category-menu.scss
@@ -1,6 +1,7 @@
 .mapseed-input-explorer-category-menu {
-  display: flex;
-  justify-content: center;
+  width: 60%;
+  text-align: center;
+  margin: auto;
 
   input {
     display: none;
